# context-teleport

./: .gitignore  Agent Context Portability_ A New Frontier.md  BRIEF  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: EDA_ROADMAP.md  PHASE2_ARCHITECTURE.md  index.md
docs/analysis/: eda-collaboration-features-report.md  state-of-the-art-literature-review.md
docs/architecture/: adapter-pattern.md  bundle-layout.md  comparison-context-daddy.md  data-flow.md  governance.md  index.md  skill-lifecycle.md  sync-engine.md
docs/contributing/: adding-adapters.md  adding-eda-parsers.md  index.md  testing.md
docs/diagrams/: Makefile  adapter-pattern.tex  architecture-overview.tex  bundle-layout.tex  data-flow.tex  skill-lifecycle.tex  sync-conflict.tex
docs/examples/: eda-project.md  eda-team.md  index.md  multi-agent-team.md  solo-developer.md
docs/getting-started/: first-project.md  index.md  installation.md  quickstart.md
docs/guides/: adapter-workflows.md  conflict-resolution.md  context-scoping.md  conventions.md  eda-workflows.md  github-issues.md  index.md  multi-agent.md  skill-management.md  team-setup.md  watch-and-automation.md
docs/reference/: adapter-protocol.md  bundle-format.md  cli.md  configuration.md  eda-parsers.md  index.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  schema.md  source-importers.md
eda-skills-pack/: README.md
scripts/: release-check.sh
src/ctx/: __init__.py  __main__.py  _entry.py
tests/: conftest.py  test_cli_mcp_parity.py  test_version.py
tests/adapters/: test_agents_md.py  test_bundle.py  test_claude_code.py  test_codex.py  test_conventions_export.py  test_cursor.py  test_gemini.py  test_hooks.py  test_mcp_reg.py  test_mcp_registration.py  test_opencode.py  test_roundtrip.py  test_schema_contracts.py
tests/cli/: test_activity.py  test_commands.py  test_config.py  test_conventions.py  test_interactive.py  test_skill_proposals.py  test_skill_tracking.py  test_watch.py
tests/core/: test_activity.py  test_conflicts.py  test_conventions.py  test_detect.py  test_dotpath_activity.py  test_dotpath_conventions.py  test_frontmatter.py  test_merge.py  test_merge_sections.py  test_migrations.py  test_schema.py  test_scope.py  test_search.py  test_skill_proposals.py  test_skill_tracking.py  test_store.py
tests/eda/: test_cli_eda.py  (+7 more)
(+83 files in other folders)
